Update ej 2 - Temario CSV.html

--- a/ej 2 - Temario CSV.html
+++ b/ej 2 - Temario CSV.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>Google Chart Example</title>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="https://jquery-csv.googlecode.com/files/jquery.csv-0.71.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="jquery.csv-0.71.js"></script>
 <script type="text/javascript"
 src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
