--- a/ej 2 - Temario CSV.html
+++ b/ej 2 - Temario CSV.html
@@ -2,7 +2,8 @@
 <head>
 <title>Google Chart Example</title>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="jquery.csv-0.71.js"></script>
+//<script src="jquery.csv-0.71.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv.min.js"></script>
 <script type="text/javascript"
 src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
