--- a/ej 2 - Temario CSV.html
+++ b/ej 2 - Temario CSV.html
@@ -11,7 +11,7 @@ google.setOnLoadCallback(drawChart);
 function drawChart() {
 // grab the CSV
 // NO FUNCIONA POR ERROR AL PEDIR EL ARCHIVO POR CORS
-$.get("https://docs.google.com/spreadsheets/d/e/2PACX-1vRUA3uzwhIWJ_4I5aAsSMbZB_lvjZRYrWWa_xK5WmQ3wL5MhlPQun-ShH7hh35tOyPwZQv_o6PwBH_N/pub?output=csv",
+$.get("https://docs.google.com/spreadsheet/pub?key=0AhNdznUnSazTdElCVTRTYzF6Zm9DSmlUQkx1NE5DY1E&output=csv",
       
 function(csvString) {
 // Transformar CSV a array utilizando jQuery
