--- a/ej 2 - Temario CSV.html
+++ b/ej 2 - Temario CSV.html
@@ -9,7 +9,7 @@ src="https://www.gstatic.com/charts/loader.js"></script>
 google.charts.load("current", {packages:["corechart"]});
 google.setOnLoadCallback(drawChart);
 function drawChart() {
-// grab the CSV
+// grab the CSV s
 // NO FUNCIONA POR ERROR AL PEDIR EL ARCHIVO POR CORS
 $.get("https://docs.google.com/spreadsheet/pub?key=0AhNdznUnSazTdElCVTRTYzF6Zm9DSmlUQkx1NE5DY1E&output=csv",
 function(csvString) {
